--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Music for Mind
+description: Raising awareness about your people's mental health
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get Started Free</a></div>
+		<h1 class="editable">Music for Mind</h1>
+		<p class="subtext editable">Raising awareness about your people's mental health</p>
+		<div class="cta button alt"><a href="/" target="_blank">Donate</a></div>
 		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<img src="https://wearencs.com/modules/custom/ncs_custom/images/ncs-logo-white-sm.svg" alt="Screenshot" class="screenshot editable"/>
 		</div>
 	</div>
 </section>
@@ -17,11 +17,15 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>Who are we?</h2>
+				<p>
+                    We are a group of young people currently taking part
+                    in the National Citizen Service scheme. Music for
+                    Mind is our social action project.
+                </p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="https://wearencs.com/modules/custom/ncs_custom/images/ncs-logo-white-sm.svg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -29,11 +33,15 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>What are our aims?</h2>
+				<p>
+                    We aim to help raise awareness for young peoples
+                    mental health as well as raise money for Mind, a UK
+                    based mental health charity.
+                </p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<!-- <img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" /> -->
 			</div>
 		</div>
 	</section>
@@ -41,29 +49,21 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>Where will the money go?</h2>
+				<p>
+                    All funds raised as part of this social action
+                    project will go to Mind, a charity registered in
+                    England (no. 219830).
+                </p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section class="testimonial">
-		<div class="container flex">
-			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
-				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
-				</blockquote>
+				<!-- <img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" /> -->
 			</div>
 		</div>
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<h2 class="editable">Help support young mental health</h2>
+		<div class="button alt"><a href="/" target="_blank">Donate</a></div>
 	</section>
 </div>
