--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 title: Music for Mind
-description: Raising awareness about your people's mental health
+description: Raising awareness about young people's mental health
 ---
 <section class="hero">
 	<div class="text-container">
 		<h1 class="editable">Music for Mind</h1>
-		<p class="subtext editable">Raising awareness about your people's mental health</p>
+		<p class="subtext editable">Raising awareness about young people's mental health</p>
 		<div class="cta button alt"><a href="/" target="_blank">Donate</a></div>
 		<div>
 			<img src="https://wearencs.com/modules/custom/ncs_custom/images/ncs-logo-white-sm.svg" alt="Screenshot" class="screenshot editable"/>
