--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-title: Music for Mind
-description: Raising awareness about young people's mental health
+title: Feeding Our Future
+description: Raising awareness for food poverty
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">Music for Mind</h1>
-		<p class="subtext editable">Raising awareness about young people's mental health</p>
-		<div class="cta button alt"><a href="/" target="_blank">Donate</a></div>
+		<h1 class="editable">Feeding Our Future</h1>
+		<p class="subtext editable">Raising awareness for food poverty</p>
+		<div class="cta button alt"><a href="https://the-olivebranch.org.uk/support" target="_blank">Donate</a></div>
 		<div>
 			<img src="https://wearencs.com/modules/custom/ncs_custom/images/ncs-logo-white-sm.svg" alt="Screenshot" class="screenshot editable"/>
 		</div>
@@ -20,8 +20,8 @@ description: Raising awareness about young people's mental health
 				<h2>Who are we?</h2>
 				<p>
                     We are a group of young people currently taking part
-                    in the National Citizen Service scheme. Music for
-                    Mind is our social action project.
+                    in the National Citizen Service scheme. Feeding Our
+                    Future is our social action project.
                 </p>
 			</div>
 			<div class="image">
@@ -35,35 +35,20 @@ description: Raising awareness about young people's mental health
 			<div class="text editable">
 				<h2>What are our aims?</h2>
 				<p>
-                    We aim to help raise awareness for young peoples
-                    mental health as well as raise money for Mind, a UK
-                    based mental health charity.
+                    We aim to raise awareness about food poverty in the
+                    UK, particularly in the North West. We have chosen
+                    to raise awareness about the Olive Branch, a local
+                    charity that helps those in need with food parcles
+                    as well as someone to talk to.
                 </p>
 			</div>
 			<div class="image">
-				<!-- <img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" /> -->
+				<img src="https://images.squarespace-cdn.com/content/v1/5f0ed93b35f9b17329ca1a31/1603190094829-QVLYIQVTJ35IQWPMRQXD/Olive+Branch+Logo+2019_transparent+%281%29.png" alt="Olive Branch Logo" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
-
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>Where will the money go?</h2>
-				<p>
-                    All funds raised as part of this social action
-                    project will go to Mind, a charity registered in
-                    England (no. 219830).
-                </p>
-			</div>
-			<div class="image">
-				<!-- <img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" /> -->
-			</div>
-		</div>
-	</section>
-
 	<section class="bottom-cta">
-		<h2 class="editable">Help support young mental health</h2>
-		<div class="button alt"><a href="/" target="_blank">Donate</a></div>
+		<h2 class="editable">Help reduce food poverty</h2>
+		<div class="button alt"><a href="https://the-olivebranch.org.uk/support" target="_blank">Donate</a></div>
 	</section>
 </div>
