--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ description: Raising awareness for food poverty
                     We aim to raise awareness about food poverty in the
                     UK, particularly in the North West. We have chosen
                     to raise awareness about the Olive Branch, a local
-                    charity that helps those in need with food parcles
+                    charity that helps those in need with food parcels
                     as well as someone to talk to.
                 </p>
 			</div>
